--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
     "firebase": "^10.8.1",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
