--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@gsap/react": "^2.1.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
     "firebase": "^10.8.1",
+    "gsap": "^3.12.5",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
